--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <div class="search">
         <h1>Search for a City</h1>
       <form>
-        <input type="text" placeholder="Search...">
-        <button  type="submit" type="button" class="btn btn-primary btn-md btn-block">Submit</button>
+        <input type="text" id="city_input" placeholder="Search...">
+        <button id="thisBtn" type="submit" type="button" class="btn btn-primary btn-md btn-block">Submit</button>
       </form>
       <div class="weather">
   <p>The weather in <span class="city">city name</span> is <span class="temperature">temperature</span>°F</p>
