--- a/index.html
+++ b/index.html
@@ -40,9 +40,19 @@
         <div class="theWind"></div>
         <div class="theHud"></div>
       </div>
+      <h3>5-Day Forecast:</h3>
       <section class="allCards">
         <div class="card" style="width: 18rem">
-          <div class="card-header">Featured</div>
+          <div class="card-header"></div>
+          <ul class="list-group list-group-flush">
+            <li class="list-group-item">Cras justo odio</li>
+            <li class="list-group-item">Cras justo odio</li>
+            <li class="list-group-item">Dapibus ac facilisis in</li>
+            <li class="list-group-item">Vestibulum at eros</li>
+          </ul>
+        </div>
+        <div class="card" style="width: 18rem">
+          <div class="card-header"><p class="cardheader1"></p></div>
           <ul class="list-group list-group-flush">
             <li class="list-group-item">Cras justo odio</li>
             <li class="list-group-item">Dapibus ac facilisis in</li>
@@ -50,7 +60,7 @@
           </ul>
         </div>
         <div class="card" style="width: 18rem">
-          <div class="card-header">Featured</div>
+          <div class="card-header"></div>
           <ul class="list-group list-group-flush">
             <li class="list-group-item">Cras justo odio</li>
             <li class="list-group-item">Dapibus ac facilisis in</li>
@@ -58,7 +68,7 @@
           </ul>
         </div>
         <div class="card" style="width: 18rem">
-          <div class="card-header">Featured</div>
+          <div class="card-header"></div>
           <ul class="list-group list-group-flush">
             <li class="list-group-item">Cras justo odio</li>
             <li class="list-group-item">Dapibus ac facilisis in</li>
@@ -66,15 +76,7 @@
           </ul>
         </div>
         <div class="card" style="width: 18rem">
-          <div class="card-header">Featured</div>
-          <ul class="list-group list-group-flush">
-            <li class="list-group-item">Cras justo odio</li>
-            <li class="list-group-item">Dapibus ac facilisis in</li>
-            <li class="list-group-item">Vestibulum at eros</li>
-          </ul>
-        </div>
-        <div class="card" style="width: 18rem">
-          <div class="card-header">Featured</div>
+          <div class="card-header"></div>
           <ul class="list-group list-group-flush">
             <li class="list-group-item">Cras justo odio</li>
             <li class="list-group-item">Dapibus ac facilisis in</li>
