several id elements added

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           The weather in <span class="city">city name</span> is
           <span class="temperature">temperature</span>
         </p>
-        
+
         <div id="date" class="current-date"></div>
         <div class="theWind"></div>
         <div class="theHud"></div>
@@ -43,44 +43,43 @@
       <h3>5-Day Forecast:</h3>
       <section class="allCards">
         <div class="card" style="width: 18rem">
-          <div class="card-header"></div>
+          <div id="card1" class="card-header"></div>
           <ul class="list-group list-group-flush">
-            <li class="list-group-item">Cras justo odio</li>
-            <li class="list-group-item">Cras justo odio</li>
-            <li class="list-group-item">Dapibus ac facilisis in</li>
-            <li class="list-group-item">Vestibulum at eros</li>
+            <li id="emoji" class="list-group-item">Cras justo odio</li>
+            <li id="temp1" class="list-group-item">Dapibus ac facilisis in</li>
+            <li id="wind1" class="list-group-item">Vestibulum at eros</li>
           </ul>
         </div>
         <div class="card" style="width: 18rem">
-          <div class="card-header"><p class="cardheader1"></p></div>
+          <div id="card2" class="card-header"><p class="cardheader1"></p></div>
           <ul class="list-group list-group-flush">
             <li class="list-group-item">Cras justo odio</li>
-            <li class="list-group-item">Dapibus ac facilisis in</li>
-            <li class="list-group-item">Vestibulum at eros</li>
+            <li id="temp2" class="list-group-item">Dapibus ac facilisis in</li>
+            <li id="wind2" class="list-group-item">Vestibulum at eros</li>
           </ul>
         </div>
         <div class="card" style="width: 18rem">
-          <div class="card-header"></div>
+          <div id="card3" class="card-header"></div>
           <ul class="list-group list-group-flush">
             <li class="list-group-item">Cras justo odio</li>
-            <li class="list-group-item">Dapibus ac facilisis in</li>
-            <li class="list-group-item">Vestibulum at eros</li>
+            <li id="temp3" class="list-group-item">Dapibus ac facilisis in</li>
+            <li id="wind3" class="list-group-item">Vestibulum at eros</li>
           </ul>
         </div>
         <div class="card" style="width: 18rem">
-          <div class="card-header"></div>
+          <div id="card4" class="card-header"></div>
           <ul class="list-group list-group-flush">
             <li class="list-group-item">Cras justo odio</li>
-            <li class="list-group-item">Dapibus ac facilisis in</li>
-            <li class="list-group-item">Vestibulum at eros</li>
+            <li id="temp4" class="list-group-item">Dapibus ac facilisis in</li>
+            <li id="wind4" class="list-group-item">Vestibulum at eros</li>
           </ul>
         </div>
         <div class="card" style="width: 18rem">
-          <div class="card-header"></div>
+          <div id="card5" class="card-header"></div>
           <ul class="list-group list-group-flush">
             <li class="list-group-item">Cras justo odio</li>
-            <li class="list-group-item">Dapibus ac facilisis in</li>
-            <li class="list-group-item">Vestibulum at eros</li>
+            <li id="temp5" class="list-group-item">Dapibus ac facilisis in</li>
+            <li id="wind5" class="list-group-item">Vestibulum at eros</li>
           </ul>
         </div>
       </section>
