--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <div class="weather">
         <p>
           The weather in <span class="city">city name</span> is
-          <span class="temperature">temperature</span>
+          <span class="temperature">temperature</span> <img src="" alt="" id="mainEmoji">
         </p>
 
         <div id="date" class="current-date"></div>
@@ -45,7 +45,7 @@
         <div class="card" style="width: 18rem">
           <div id="card1" class="card-header"></div>
           <ul class="list-group list-group-flush">
-            <li id="emoji" class="list-group-item">Cras justo odio</li>
+            <li id="emoji1" class="list-group-item">Cras justo odio</li>
             <li id="temp1" class="list-group-item">Dapibus ac facilisis in</li>
             <li id="wind1" class="list-group-item">Vestibulum at eros</li>
           </ul>
