--- a/index.html
+++ b/index.html
@@ -45,41 +45,41 @@
         <div class="card" style="width: 18rem">
           <div id="card1" class="card-header"></div>
           <ul class="list-group list-group-flush">
-            <li id="emoji1" class="list-group-item">Cras justo odio</li>
-            <li id="temp1" class="list-group-item">Dapibus ac facilisis in</li>
-            <li id="wind1" class="list-group-item">Vestibulum at eros</li>
+            <li id="emoji1" class="list-group-item"> <img id="icon1" src=""> </li>
+            <li id="temp1" class="list-group-item"></li>
+            <li id="wind1" class="list-group-item"></li>
           </ul>
         </div>
         <div class="card" style="width: 18rem">
           <div id="card2" class="card-header"><p class="cardheader1"></p></div>
           <ul class="list-group list-group-flush">
-            <li class="list-group-item">Cras justo odio</li>
-            <li id="temp2" class="list-group-item">Dapibus ac facilisis in</li>
-            <li id="wind2" class="list-group-item">Vestibulum at eros</li>
+            <li id="emoji2" class="list-group-item"> <img  id="icon2" src=""> </li>
+            <li id="temp2" class="list-group-item"></li>
+            <li id="wind2" class="list-group-item"></li>
           </ul>
         </div>
         <div class="card" style="width: 18rem">
           <div id="card3" class="card-header"></div>
           <ul class="list-group list-group-flush">
-            <li class="list-group-item">Cras justo odio</li>
-            <li id="temp3" class="list-group-item">Dapibus ac facilisis in</li>
-            <li id="wind3" class="list-group-item">Vestibulum at eros</li>
+            <li id="emoji3" class="list-group-item"> <img  id="icon3" src=""> </li>
+            <li id="temp3" class="list-group-item"></li>
+            <li id="wind3" class="list-group-item"></li>
           </ul>
         </div>
         <div class="card" style="width: 18rem">
           <div id="card4" class="card-header"></div>
           <ul class="list-group list-group-flush">
-            <li class="list-group-item">Cras justo odio</li>
-            <li id="temp4" class="list-group-item">Dapibus ac facilisis in</li>
-            <li id="wind4" class="list-group-item">Vestibulum at eros</li>
+            <li id="emoji4" class="list-group-item"> <img id="icon4" src=""> </li>
+            <li id="temp4" class="list-group-item"></li>
+            <li id="wind4" class="list-group-item"></li>
           </ul>
         </div>
         <div class="card" style="width: 18rem">
           <div id="card5" class="card-header"></div>
           <ul class="list-group list-group-flush">
-            <li class="list-group-item">Cras justo odio</li>
-            <li id="temp5" class="list-group-item">Dapibus ac facilisis in</li>
-            <li id="wind5" class="list-group-item">Vestibulum at eros</li>
+            <li  id="emoji5" class="list-group-item"> <img id="icon5" src=""> </li>
+            <li id="temp5" class="list-group-item"></li>
+            <li id="wind5" class="list-group-item"></li>
           </ul>
         </div>
       </section>
