--- a/index.html
+++ b/index.html
@@ -30,10 +30,12 @@
           Submit
         </button>
       </form>
+      <div class="memory mt-1 me-2 ms-2 d-flex flex-column"></div>
       <div class="weather">
         <p>
           The weather in <span class="city">city name</span> is
-          <span class="temperature">temperature</span> <img src="" alt="" id="mainEmoji">
+          <span class="temperature">temperature</span>
+          <img src="" alt="" id="mainEmoji" />
         </p>
 
         <div id="date" class="current-date"></div>
@@ -41,11 +43,13 @@
         <div class="theHud"></div>
       </div>
       <h3>5-Day Forecast:</h3>
-      <section class="allCards">
+      <section id="forecastContainer" class="allCards">
         <div class="card" style="width: 18rem">
           <div id="card1" class="card-header"></div>
           <ul class="list-group list-group-flush">
-            <li id="emoji1" class="list-group-item"> <img id="icon1" src=""> </li>
+            <li id="emoji1" class="list-group-item">
+              <img id="icon1" src="" />
+            </li>
             <li id="temp1" class="list-group-item"></li>
             <li id="wind1" class="list-group-item"></li>
           </ul>
@@ -53,7 +57,9 @@
         <div class="card" style="width: 18rem">
           <div id="card2" class="card-header"><p class="cardheader1"></p></div>
           <ul class="list-group list-group-flush">
-            <li id="emoji2" class="list-group-item"> <img  id="icon2" src=""> </li>
+            <li id="emoji2" class="list-group-item">
+              <img id="icon2" src="" />
+            </li>
             <li id="temp2" class="list-group-item"></li>
             <li id="wind2" class="list-group-item"></li>
           </ul>
@@ -61,7 +67,9 @@
         <div class="card" style="width: 18rem">
           <div id="card3" class="card-header"></div>
           <ul class="list-group list-group-flush">
-            <li id="emoji3" class="list-group-item"> <img  id="icon3" src=""> </li>
+            <li id="emoji3" class="list-group-item">
+              <img id="icon3" src="" />
+            </li>
             <li id="temp3" class="list-group-item"></li>
             <li id="wind3" class="list-group-item"></li>
           </ul>
@@ -69,7 +77,9 @@
         <div class="card" style="width: 18rem">
           <div id="card4" class="card-header"></div>
           <ul class="list-group list-group-flush">
-            <li id="emoji4" class="list-group-item"> <img id="icon4" src=""> </li>
+            <li id="emoji4" class="list-group-item">
+              <img id="icon4" src="" />
+            </li>
             <li id="temp4" class="list-group-item"></li>
             <li id="wind4" class="list-group-item"></li>
           </ul>
@@ -77,7 +87,9 @@
         <div class="card" style="width: 18rem">
           <div id="card5" class="card-header"></div>
           <ul class="list-group list-group-flush">
-            <li  id="emoji5" class="list-group-item"> <img id="icon5" src=""> </li>
+            <li id="emoji5" class="list-group-item">
+              <img id="icon5" src="" />
+            </li>
             <li id="temp5" class="list-group-item"></li>
             <li id="wind5" class="list-group-item"></li>
           </ul>
