--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="search">
       <h1>Search for a City</h1>
       <form>
-        <input type="text" id="city_input" placeholder="Search..." />
+        <input  type="text" id="city_input" placeholder="Search..." />
         <button
           id="thisBtn"
           type="submit"
@@ -30,7 +30,8 @@
           Submit
         </button>
       </form>
-      <div class="memory mt-1 me-2 ms-2 d-flex flex-column"></div>
+      <hr style="width: 25%" />
+      <div id="cityList"></div>
       <div class="weather">
         <p>
           The weather in <span class="city">city name</span> is
