--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/Assets/style.css" />
   </head>
 
   <body>
@@ -109,6 +109,6 @@
     <script>
       dayjs.extend(window.dayjs_plugin_advancedFormat);
     </script>
-    <script src="script.js"></script>
+    <script src="/Assets/script.js"></script>
   </body>
 </html>
