fixed the src tags in index file

--- a/index.html
+++ b/index.html
@@ -113,3 +113,5 @@
     <script src="./Assets/script.js"></script>
   </body>
 </html>
+
+<!-- code is functioning properly when opened with live server but not properly with default browser -->
